<resources>
    <string name="app_name">RemindMe</string>
    <string name="search_title">search_title</string>
    <string name="menu_item_notification">Напоминания</string>
    <string name="menu_item_liked">Избранное</string>
    <string name="menu_item_archive">Архив</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_info">Справка</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="this_is_fragment">This is fragment</string>
    <string name="name_app">RemindMe</string>


    <string name="tab_item_history">History</string>
    <string name="tab_item_idea">Idea</string>
    <string name="tab_item_todo">Todo</string>
    <string name="tab_item_birthday">Birthday</string>


</resources>
